--- a/estilos/style.css
+++ b/estilos/style.css
@@ -183,7 +183,7 @@ body {
         url(/img/bg2.jpg);
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: cove;
+    background-size: cover;
     background-attachment: fixed;
     padding: 100px 0;
 }
@@ -448,5 +448,209 @@ p {
 .general-2,
 .general-3 {
     width: 100%;
+}
+}
+
+@media (max-width: 636px) {
+    /* Ajusta el tamaño de las imágenes */
+    img {
+      width: 100%;
+      height: auto;
+    }
+  
+    /* Ajusta el tamaño de los contenedores */
+   .container {
+      max-width: 100%;
+      padding: 20px;
+    }
+  
+    /* Ajusta el tamaño de los títulos */
+    h1, h2, h3, h4, h5, h6 {
+      font-size: 18px;
+    }
+  
+    /* Ajusta el tamaño del texto */
+    p {
+      font-size: 14px;
+    }
+  
+    /* Ajusta el tamaño de los botones */
+   .btn-1 {
+      padding: 10px 20px;
+      font-size: 14px;
+    }
+  
+
+.menu {
+    flex-direction: column;
+}
+
+.menu.navbar ul li {
+    width: 100%;
+}
+
+.menu.navbar ul li a {
+    padding: 10px;
+    font-size: 14px;
+}
+
+
+.services-content {
+    padding: 20px;
+}
+
+.services-content h2 {
+    font-size: 18px;
+}
+
+.services-content p {
+    font-size: 14px;
+}
+
+
+.general-1,.general-2,.general-3 {
+    width: 100%;
+    padding: 20px;
+    }
+}
+
+@media (max-width: 524px) {
+
+.header-content h1 {
+    font-size: 30px;
+}
+
+.header-content p {
+    padding: 0 20px;
+}
+
+.coffe-content h2 {
+    font-size: 30px;
+    padding: 0 20px;
+}
+
+.txt-p {
+    padding: 0 20px;
+}
+
+.services-content h2 {
+    font-size: 30px;
+}
+
+.services-content p {
+    padding: 0 20px;
+}
+
+.general-1 {
+    width: 100%;
+    padding: 20px;
+}
+
+.general-2,
+.general-3 {
+    width: 100%;
+}
+
+
+img {
+    width: 100%;
+    height: auto;
+}
+}
+
+
+@media (max-width: 400px) {
+
+.header-content h1 {
+    font-size: 25px;
+}
+
+.menu {
+    flex-direction: column;
+}
+
+.header-content p {
+    padding: 0 15px;
+}
+
+.coffe-content h2 {
+    font-size: 25px;
+    padding: 0 15px;
+}
+
+.txt-p {
+    padding: 0 15px;
+}
+
+.services-content h2 {
+    font-size: 25px;
+}
+
+.services-content p {
+    padding: 0 15px;
+}
+
+.general-1 {
+    width: 100%;
+    padding: 15px;
+}
+
+.general-2,
+.general-3 {
+    width: 100%;
+}
+
+
+    img {
+    width: 100%;
+    height: auto;
+}
+}
+
+
+@media (max-width: 300px) {
+
+.header-content h1 {
+    font-size: 20px;
+}
+
+.header-content p {
+    padding: 0 10px;
+}
+
+.coffe-content h2 {
+    font-size: 20px;
+    padding: 0 10px;
+}
+
+.txt-p {
+    padding: 0 10px;
+}
+
+.services-content h2 {
+    font-size: 20px;
+}
+
+.services-content p {
+    padding: 0 10px;
+    }
+    
+.general-1 {
+    width: 100%;
+    padding: 10px;
+}
+    
+.general-2,
+.general-3 {
+    width: 100%;
+}
+
+.menu {
+    flex-direction: column;
+}
+
+img {
+    width: 100%;
+    height: auto;
 }
 }
